# fountain-zed-extension

./: .gitignore  Cargo.toml  extension.toml
languages/fountain/: config.toml  highlights.scm  injections.scm
languages/fountain_inline/: config.toml  highlights.scm
src/: lib.rs
